--- a/DutchTreat/wwwroot/css/site.css
+++ b/DutchTreat/wwwroot/css/site.css
@@ -1,4 +1,6 @@
-﻿body {
+﻿
+
+/*body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -82,4 +84,4 @@ menu li {
 
   menu li:last-of-type::after {
     content: "";
-  }
+  }*/
