--- a/DutchTreat/Views/App/Shop.cshtml
+++ b/DutchTreat/Views/App/Shop.cshtml
@@ -2,6 +2,10 @@
 @{
   ViewData["Title"] = "Shop";
 }
+@section Scripts {
+  <script src="~/ts/storecustomer.js"></script>
+  <script src="~/ts/main.js"></script>
+}
 
 <p>Count: @Model.Count()</p>
 <div class="row">
@@ -9,7 +13,7 @@
   {
     <div class="col-md-3">
       <div class="border bg-light rounded p-1">
-        <img src="~/img/@(p.ArtId).jpg" class="img-fluid" alt="@p.Title"/>
+        <img src="~/img/@(p.ArtId).jpg" class="img-fluid" alt="@p.Title" />
         <h3>@p.Category - @p.Size</h3>
         <ul>
           <li>Price: @p.Price</li>
