--- a/DutchTreat/ClientApp/app/shop/productList.component.html
+++ b/DutchTreat/ClientApp/app/shop/productList.component.html
@@ -1,5 +1,19 @@
-﻿<div id="row">
-  <ul>
-    <li *ngFor="let p of products">{{ p.title }}: {{ p.price | currency }}  </li>
-  </ul>
+﻿<div class="row">
+  <div class="product-info col-md-4" *ngFor="let p of products">
+    <div class="card bg-light p-1 m-1">
+      <img src="/img/{{ p.artId }}.jpg" class="img-fluid" [alt]="p.title" />
+      <div class="product-name">{{ p.category }} - {{ p.size }}</div>
+      <div><strong>Price</strong>: {{ p.price | currency}}</div>
+      <div><strong>Artist</strong>: {{ p.artist }}</div>
+      <div><strong>Title</strong>: {{ p.title }}</div>
+      <div><strong>Description</strong>: {{ p.artDescription }}</div>
+      <button id="buyButton" class="btn btn-success btn-sm pull-right" (click)="addProduct(p)">
+        Buy
+      </button>
+    </div>
+  </div>
 </div>
+
+<!--<ul>
+  <li *ngFor="let p of products">{{ p.title }}: {{ p.price | currency }}</li>
+</ul>-->
