--- a/DutchTreat/ClientApp/app/shop/productList.component.css
+++ b/DutchTreat/ClientApp/app/shop/productList.component.css
@@ -1,12 +1,12 @@
 ﻿.product-info img {
   max-width: 100px;
   float: left;
-  margin: 0 2px;
+  margin: 0px 2px;
   border: solid 1px black;
 }
 
 .product-info .product-name {
-  font-size: large;
+  font-size: medium large;
   font-weight: bold; 
 }
 
