--- a/DutchTreat/ClientApp/app/Checkout/checkout.component.html
+++ b/DutchTreat/ClientApp/app/Checkout/checkout.component.html
@@ -1,5 +1,5 @@
-﻿<div class="row">
-  <div *ngIf="errorMessage" class="alert alert-warning">{{ errorMessage }}</div>
+﻿<div>
+  <div id="errMsg" *ngIf="errorMessage" class="alert alert-warning">{{ errorMessage }}</div>
   <h3>Confirm Order</h3>
   <table class="table table-bordered table-hover">
     <tr *ngFor="let o of data.order.items">
@@ -10,7 +10,7 @@
       <td>{{ (o.unitPrice * o.quantity)|currency:'USD':true }}</td>
     </tr>
   </table>
-  <div class="col-md-4 col-md-offset-8 text-right">
+  <div class="col-md-4 offset-md-8 text-right">
     <table class="table table-condensed">
       <tr>
         <td class="text-right">Subtotal</td>
@@ -26,6 +26,7 @@
       </tr>
     </table>
     <button class="btn btn-success" (click)="onCheckout()">Complete Purchase</button>
+    <span>&nbsp;&nbsp;</span>
     <a routerLink="/" class="btn btn-info">Cancel</a>
   </div>
 
