--- a/DutchTreat/ClientApp/app/login/login.component.html
+++ b/DutchTreat/ClientApp/app/login/login.component.html
@@ -1,5 +1,5 @@
 ﻿<div class="row">
-  <div class="col-md-4 col-md-offset-4">
+  <div class="col-md-4 offset-md-4">
     <div *ngIf="errorMessage" class="alert alert-warning">{{ errorMessage }}</div>
     <form (submit)="onLogin()" #theForm="ngForm" novalidate>
       <div class="form-group">
